--- a/meson.build
+++ b/meson.build
@@ -9,8 +9,15 @@ default_options: [
 inc_dir = include_directories('include')
 
 executable(
-    meson.project_name(),
+   'server', 
 ['src/server.c'],
+include_directories: inc_dir,
+build_by_default: true,
+)
+
+executable(
+  'client',
+['src/client.c'],
 include_directories: inc_dir,
 build_by_default: true,
 )
