users now have to provide a username, can be seen by every other client Signed-off-by: landixbtw <landixbtw@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -21,3 +21,27 @@ executable(
 include_directories: inc_dir,
 build_by_default: true,
 )
+
+python = import('python').find_installation('python3')
+
+# Define the 'format' target
+run_target(
+  'format',
+  command : [
+    python, 
+    # Use files() so Meson knows exactly where the script is
+    files('scripts/format.py'), 
+    # Pass the absolute path to your project root
+    meson.project_source_root()
+  ]
+)
+
+run_target(
+  'clang-check',
+  command : [
+    python, 
+    files('scripts/format.py'), 
+    meson.project_source_root(), 
+    '--check'
+  ]
+)
